--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Visualization Assignment
         </h1>
         <h2 class="subtitle">
-          Full Name
+          Martha Salcedo-Suarez
         </h2>
       </div>
     </div>
