--- a/index.html
+++ b/index.html
@@ -212,17 +212,17 @@
         <div class="media-content">
             <p>
               <!-- todo: replace with your information -->
-              <strong>Full Name</strong>
+              <strong>Martha Salcedo-Suarez</strong>
               <br/>
               This is a good place to place a brief biography describing your interests and skills, a professional profile photo, and/or links to your Github, Linkedin, and other <em>professional</em> social media accounts.
               <br/>
               <!-- find brand icons at: https://fontawesome.com/icons?d=gallery&s=brands&m=free -->
-              <a href="https://github.com/">
+              <a href="https://github.com/msalcedosuarez">
                 <span class="fab fa-github"></span>
                 <span>Github</span>
               </a>
               &bullet;
-              <a href="https://www.linkedin.com/">
+              <a href="https://www.linkedin.com/in/msalcedosuarez/">
                 <span class="fab fa-linkedin"></span>
                 <span>LinkedIn</span>
               </a>
