--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
             </a>
           </div>
 
+          <div id="main-navbar" class="navbar-menu">
+            <a class="navbar-item" href="#vis1">
+              <span class="icon">
+                <i class="fas fa-chart-area"></i>
+              </span>
+              <span>Visualizations</span>
+            </a>
+          </div>
+
           <div class="navbar-end">
             <a class="navbar-item" href="#grade">
               <span class="icon">
