--- a/index.html
+++ b/index.html
@@ -53,15 +53,6 @@
             </a>
           </div>
 
-          <div id="main-navbar" class="navbar-menu">
-            <a class="navbar-item" href="#vis1">
-              <span class="icon">
-                <i class="fas fa-chart-area"></i>
-              </span>
-              <span>Visualizations</span>
-            </a>
-          </div>
-
           <div class="navbar-end">
             <a class="navbar-item" href="#grade">
               <span class="icon">
@@ -91,6 +82,9 @@
 
       <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
       </svg>
+
+      <h2>Visualization 1</h2>
+      <img src="Sheet1.jpg" alt="Trulli" width="500" height="333">
 
       <h3>Interpretation</h3>
 
