--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
       <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
       </svg>
 
-      <h2>Visualization 1</h2>
-      <img src="Sheet1.jpg" alt="Trulli" width="500" height="333">
+      <h2>Prototypes</h2>
+      <img src="Visualization1HW1.jpg" alt="" width="1000" height="300">
+
+      <img src="Visualization2HW1.jpg" alt="" width="1000" height="300">
+
+      <img src="Visualization3HW1.jpg" alt="" width="1000" height="300">
 
       <h3>Interpretation</h3>
 
