--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       </svg>
 
       <h2>Prototypes</h2>
-      <img src="Visualization1HW1.jpg" alt="" width="500" height="333">
+      <img src="Visualization1HW1.jpg" alt="" width="100%" height="400">
 
-      <img src="Visualization2HW1.jpg" alt="" width="500" height="333">
+      <img src="Visualization2HW1.jpg" alt="" width="100%" height="400">
 
-      <img src="Visualization3HW1.jpg" alt="" width="500" height="333">
+      <img src="Visualization3HW1.jpg" alt="" width="100%" height="400">
 
       <h3>Interpretation</h3>
 
