--- a/index.html
+++ b/index.html
@@ -81,7 +81,64 @@
       <h2>Visualization 1</h2>
 
       <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
+        <!-- starts here -->
+        <style>
+        .chart rect {
+          fill: #FF69B4;
+        }
+        .chart text {
+          fill: white;
+          font: 10px sans-serif;
+          text-anchor: end;
+        }
+        </style>
+
+        <svg class="chart"></svg>
+        <script src="//d3js.org/d3.v3.min.js"></script>
+        <script>
+
+        var width = 420,
+            barHeight = 20;
+
+        var x = d3.scale.linear()
+            .range([0, width]);
+
+        var chart = d3.select(".chart")
+            .attr("width", width);
+
+        d3.tsv("D3_CHart3_HW1.tsv", type, function(error, data) {
+          x.domain([0, d3.max(data, function(d) { return d.value; })]);
+
+          chart.attr("height", barHeight * data.length);
+
+          var bar = chart.selectAll("g")
+              .data(data)
+            .enter().append("g")
+              .attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
+
+          bar.append("rect")
+              .attr("width", function(d) { return x(d.value); })
+              .attr("height", barHeight - 1);
+
+          bar.append("text")
+              .attr("x", function(d) { return x(d.value) - 3; })
+              .attr("y", barHeight / 2)
+              .attr("dy", ".35em")
+              .text(function(d) { return d.value; });
+        });
+
+        function type(d) {
+          d.value = +d.value; // coerce to number
+          return d;
+        }
+      </script>
+
+
       </svg>
+
+      <!-- include d3.js -->
+      <script src="https://d3js.org/d3.v5.min.js"></script>
+
 
       <h2>Prototypes</h2>
       <img src="Visualization1HW1.jpg" alt="" width="100%" height="400">
