--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>CS 360/560 Spring 2019</title>
-
   <!-- bulma 0.7.2 and font awesome v5.7.1 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" integrity="sha256-2pUeJf+y0ltRPSbKOeJh09ipQFYxUdct5nTY6GAXswA=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -15,7 +13,6 @@
 
 <!-- body -->
 <body>
-
   <!-- header -->
   <section class="hero is-primary is-bold">
     <!-- todo: change assignment and name -->
@@ -74,73 +71,96 @@
     </div>
   </section>
 
+
+
+
+<section class="section">
+  <div class="container content">
+    <h2>D3 Visualizations</h2>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <style>
+      .bar {
+        fill: #4e79a7;
+      }
+    </style>
+      <script>
+      // set the dimensions and margins of the graph
+      var margin = {top: 20, right: 20, bottom: 30, left: 40},
+          width = 960 - margin.left - margin.right,
+          height = 500 - margin.top - margin.bottom;
+
+      // set the ranges
+      var x = d3.scaleBand()
+                .range([0, width])
+                .padding(0.1);
+      var y = d3.scaleLinear()
+                .range([height, 0]);
+
+      // append the svg object to the body of the page
+      // append a 'group' element to 'svg'
+      // moves the 'group' element to the top left margin
+      var svg = d3.select("body").append("svg")
+          .attr("width", width + margin.left + margin.right)
+          .attr("height", height + margin.top + margin.bottom)
+        .append("g")
+          .attr("transform",
+                "translate(" + margin.left + "," + margin.top + ")");
+
+      // get the data
+      d3.csv("data1.csv").then(function(data) {
+        console.log(data);
+
+        // format the data
+        data.forEach(function(d) {
+          d.Saturday = +d.Saturday;
+        });
+
+        // Scale the range of the data in the domains
+        x.domain(data.map(function(d) { return d.Neighborhood; }));
+        y.domain([0, d3.max(data, function(d) { return d.Saturday; })]);
+
+        // append the rectangles for the bar chart
+        svg.selectAll(".bar")
+            .data(data)
+          .enter().append("rect")
+            .attr("class", "bar")
+            .attr("x", function(d) { return x(d.Neighborhood); })
+            .attr("width", x.bandwidth())
+            .attr("y", function(d) { return y(d.Saturday); })
+            .attr("height", function(d) { return height - y(d.Saturday); });
+
+        // add the x Axis
+        svg.append("g")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(x));
+
+        // add the y Axis
+        svg.append("g")
+            .call(d3.axisLeft(y));
+
+      });
+
+      </script>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
   <!-- todo: add sections as necessary -->
   <section class="section">
     <div class="container content">
       <!-- todo: modify as necessary (or move visualizations to separate pages) -->
-      <h2>Visualization 1</h2>
-
-      <svg width="100%" height="400" style="background-color: whitesmoke; border: 1px solid black;">
-        <!-- starts here -->
-        <style>
-        .chart rect {
-          fill: #FF69B4;
-        }
-        .chart text {
-          fill: white;
-          font: 10px sans-serif;
-          text-anchor: end;
-        }
-        </style>
-
-        <svg class="chart"></svg>
-        <script src="//d3js.org/d3.v3.min.js"></script>
-        <script>
-
-        var width = 420,
-            barHeight = 20;
-
-        var x = d3.scale.linear()
-            .range([0, width]);
-
-        var chart = d3.select(".chart")
-            .attr("width", width);
-
-        d3.tsv("D3_Chart3_HW1.tsv", type, function(error, data) {
-          x.domain([0, d3.max(data, function(d) { return d.value; })]);
-
-          chart.attr("height", barHeight * data.length);
-
-          var bar = chart.selectAll("g")
-              .data(data)
-            .enter().append("g")
-              .attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
-
-          bar.append("rect")
-              .attr("width", function(d) { return x(d.value); })
-              .attr("height", barHeight - 1);
-
-          bar.append("text")
-              .attr("x", function(d) { return x(d.value) - 3; })
-              .attr("y", barHeight / 2)
-              .attr("dy", ".35em")
-              .text(function(d) { return d.value; });
-        });
-
-        function type(d) {
-          d.value = +d.value; // coerce to number
-          return d;
-        }
-      </script>
-
-
-      </svg>
-
-      <!-- include d3.js -->
-      <script src="https://d3js.org/d3.v5.min.js"></script>
-
 
       <h2>Prototypes</h2>
+
       <img src="Visualization1HW1.jpg" alt="" width="100%" height="400">
 
       <img src="Visualization2HW1.jpg" alt="" width="100%" height="400">
